--- a/main.html
+++ b/main.html
@@ -10,12 +10,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container"></div>
 	<script type="text/javascript" src="./script.js">
 	</script>
-
+</body>
 </html>
 
-
-<img src="" alt="">
-<p></p>
